fix pre stretching out horizontally
Thanks @ejamesc!

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -209,6 +209,7 @@ ul.posts {
     border: 1px solid #ddd;
     background-color: #eef;
     padding: 0 .4em;
+    overflow-x: scroll;
   }
 
   .post ul,
